--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Documentation for setting up and using Mobile Services on OpenShift",
   "scripts": {
-    "build:local": "./bin/quick-build.sh local-site.yml",
+    "build:local": "./bin/quick-build.sh testui-site.yml",
     "build": "./bin/build.sh",
     "serve": "live-server ./build/site",
     "watch": "watch 'npm run build:local' modules; npm run serve"
